--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,28 +11,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CutOn"
         tools:targetApi="31">
+
         <activity
-            android:name=".SplashScreenActivity"
+            android:name=".InitializeScreenActivity"
             android:exported="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity
-            android:name=".CatalogBrandsActivity"
-            android:exported="false" />
-        <activity
-            android:name=".LogoutActivity"
-            android:exported="false" />
-        <activity
-            android:name=".HomeMenuActivity"
-            android:exported="false" />
-        <activity
-            android:name=".AuthorizationScreenActivity"
-            android:exported="false"/>
+
+        <activity android:name=".CatalogBrandsActivity" />
+        <activity android:name=".LogoutActivity" />
+        <activity android:name=".HomeMenuActivity" />
+        <activity android:name=".AuthorizationScreenActivity" />
+
     </application>
 
 </manifest>
