--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,19 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".InitializeScreenActivity"
-            android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:name=".InitializeScreenActivity" />
 
         <activity android:name=".CatalogBrandsActivity" />
         <activity android:name=".LogoutActivity" />
         <activity android:name=".HomeMenuActivity" />
-        <activity android:name=".AuthorizationScreenActivity" />
+        <activity android:name=".AuthorizationScreenActivity"
+            android:exported="true"
+            android:theme="@style/yourThemeName">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
     </application>
 
