--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+buildscript {
+    ext.coroutines_version = "1.6.1"
+    ext.nav_version = "2.4.0"
+
+    ext.okhttp_version = "4.9.3"
+    ext.gson_version = "2.9.0"
+}
+
 plugins {
     id 'com.android.application' version '7.4.1' apply false
     id 'com.android.library' version '7.4.1' apply false
