--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript {
 
     ext.okhttp_version = "4.9.3"
     ext.gson_version = "2.9.0"
+    ext.retrofit2_version = "2.8.1"
 }
 
 plugins {
