--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".InitializeScreenActivity"
+            android:name=".activities.InitializeScreenActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,10 +25,10 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".AuthorizationScreenActivity" />
-        <activity android:name=".HomeMenuActivity" />
-        <activity android:name=".CatalogBrandsActivity" />
-        <activity android:name=".LogoutActivity" />
+        <activity android:name=".activities.AuthorizationScreenActivity" />
+        <activity android:name=".activities.HomeMenuActivity" />
+        <activity android:name=".activities.CatalogBrandsActivity" />
+        <activity android:name=".activities.LogoutActivity" />
 
     </application>
 </manifest>
