--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,9 @@ dependencies {
     implementation "com.squareup.retrofit2:retrofit:$retrofit2_version"
     implementation "com.squareup.retrofit2:converter-gson:$gson_version"
 
+    // RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+
 }
