--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.coroutines_version = "1.6.1"
-    ext.nav_version = "2.4.0"
+    ext.nav_version = "2.5.3"
 
-    ext.okhttp_version = "4.9.3"
+    ext.okhttp_version = "4.11.0"
     ext.gson_version = "2.9.0"
     ext.retrofit2_version = "2.8.1"
+
+    ext.lifecycle_version = "2.6.1"
+
+    ext.fragment_version = "1.5.7"
 }
 
 plugins {
